Quick fix the airborn header overlapping with the navigation

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -172,6 +172,13 @@
 
 	&.is-airborne {
 
+		@include mq($laptop) {
+			height: 0;
+			padding: 0;
+			margin: 0;
+			overflow: hidden;
+		}
+
 		svg {
 			transform: scale(1.25);
 		}
